[package]
name = "fungible-token"
version = "1.0.0"
authors = ["Near Inc <hello@nearprotocol.com>", "graphite"]
edition = "2025"
repository = "https://github.com/graphite/ft-playground"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.5.0"
near-contract-standards = "5.5.0"

[dev-dependencies] 
near-sdk = { version = "5.5.0", features = ["unit-testing"] }
near-workspaces = { version = "0.14.1", features = ["unstable"] }
anyhow = "1.0"
tokio = { version = "1.41.0", features = ["full"] }
cargo-near-build = "0.3.2"

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.17.0-rust-1.86.0n"
image_digest = "sha256:1784ca6310f3496f0048356ce420921c8f5fdf71ee8124d43a2e1ceb1f70db8a"
passed_env = []
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]
